fix: 修复 Java 8 兼容性问题
- Files.writeString() -> Files.write(path, bytes)
- Files.readString() -> new String(Files.readAllBytes(path))
- Path.of() -> Paths.get()